opennms (1.1.3-1woody) stable; urgency=low

  * Not yet released
  * New upstream release
  * Added libgetopt-mixed-perl as a dependency for common, removed it
    as a dependency for contrib, (it was backward before, this is how
    it should have been).
  * Added opennms-common as a dependency for opennms-db, and moved 
    install.pl from common to db.
  * Added a symlink to CATALINA_HOME/server/lib for upstream copy of 
    log4j and removed dependency on package from Debian repository.
  * Changed webapp post-install to use the new tomcat-install.pl, the
    use of install.pl for installing the webui context is now 
    deprecated.
  * Reverted log4j.properties back to upstream defaults.
  * Changed opennms-db.postinst and opennms-db.postrm to be kinder
    about starting and stoping the database, (see
    http://bugs.opennms.org/cgi-bin/bugzilla/show_bug.cgi?id=814).

 -- Eric Evans <eevans@sym-link.com>  Fri,  5 Sep 2003 14:10:00 -0500

opennms (1.1.2-1woody) stable; urgency=low

  * Made /etc/opennms/web.xml a symlink that points to
    /usr/share/java/webapps/opennms/WEB-INF/web.xml to make tomcat happy.
  * Changed the post-install of opennms-webapp and opennms-db, since
    install.pl now runs as root.
  * Fixed postrm of opennms-db so that dropdb works.
  * Replaced reference to /opt/Opennms with /usr/share/opennms in init script.
  * Added dependency on libgetopt-mixed-perl for opennms-contrib,
    (send-event.pl requires it).
  * Fixed duplicate and missing depends to make lintian happy.

 -- Eric Evans <eevans@opennms.org>  Fri,  5 Sep 2003 14:10:00 -0500

opennms (1.1.1-5) unstable; urgency=low

  * The "Tax Man Cometh" release!
  * Fixed the database install portion so that upgrades now run smoothly.
  * We now use the "postgres" user to do the db work instead of root.
  * Split up packages again to use an opennms-db package for all database
    stuff.
  * Moved the misc jars (not opennms*jar) to opennms-server, since it's the