@@ -1,5 +1,7 @@
-/usr/share/java/opennms_common.jar		/usr/share/opennms/lib/opennms_common.jar
-/usr/share/java/opennms_core.jar		/usr/share/opennms/lib/opennms_core.jar
-/usr/share/java/opennms_joesnmp.jar		/usr/share/opennms/lib/opennms_joesnmp.jar
-/usr/share/java/opennms_services.jar		/usr/share/opennms/lib/opennms_services.jar
-/usr/share/java/opennms_web.jar			/usr/share/opennms/lib/opennms_web.jar
+/usr/share/java/opennms_common.jar	/usr/share/opennms/lib/opennms_common.jar
+/usr/share/java/opennms_core.jar	/usr/share/opennms/lib/opennms_core.jar
+/usr/share/java/opennms_joesnmp.jar	/usr/share/opennms/lib/opennms_joesnmp.jar
+/usr/share/java/opennms_services.jar	/usr/share/opennms/lib/opennms_services.jar
+/usr/share/java/opennms_web.jar		/usr/share/opennms/lib/opennms_web.jar
+/usr/share/java/opennms_install.jar	/usr/share/opennms/lib/opennms_install.jar
+/usr/share/java/postgresql.jar		/usr/share/opennms/lib/postgresql.jar
