@@ -7,9 +7,26 @@ set -e
 
 TOMCAT4_PIDFILE=/var/run/tomcat4.pid
 
+getjava()
+{
+    for dir in /usr/java/jdk1.4* /usr/java/j2sdk1.4* /usr/lib/j2sdk1.4* /usr/lib/j2sdk-1.4* /opt/IBMJava2-13 /usr/java/jdk1.3* /usr/java/j2sdk1.3* /usr/lib/j2sdk1.3*
+	do
+	    if [ -d "$dir" -a -f "$dir/lib/tools.jar" ]; then
+                JAVA_HOME="$dir"
+                break
+	    fi
+	done
+
+    export JAVA_HOME
+}
+
 case "$1" in
     configure)
-	/usr/share/opennms/bin/tomcat-install.pl -u -r -c
+        [ -z "$JAVA_HOME" ] && getjava
+
+	[ -x "$JAVA_HOME" ] && $JAVA_HOME/bin/java -jar \
+	    /usr/share/opennms/lib/opennms_install.jar -S \
+	    /etc/tomcat4/server.xml
 
 	if [ -f $TOMCAT4_PIDFILE ]; then
 		invoke-rc.d --quiet tomcat4 restart
